k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tp-global-devops-service
spec:
  selector:
    app: tp-global-devops # Doit correspondre au label du Deployment
  ports:
    - protocol: TCP
      port: 80 # Le port du Service (interne au cluster)
      targetPort: 8080 # Le port du conteneur (Tomcat)
  type: ClusterIP # Type de service standard pour être utilisé par un Ingress
