k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tp-global-devops-ingress
  annotations:
    # Annotation standard pour l'Ingress Controller Nginx (requis pour Minikube/K8s)
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: devops-app.info # Domaine d'accès public
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tp-global-devops-service
                port:
                  number: 80 # Le port du service (défini dans service.yaml)
